Task7/gatekeeper/constraint-templates/hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsphostpath
  annotations:
    description: >-
      Запрещает использование hostPath-томов в подах.
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostPath
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsphostpath

        violation[{"msg": msg}] {
          volume := input.review.object.spec.volumes[_]
          volume.hostPath
          msg := sprintf("Том '%v' использует hostPath — это запрещено политикой безопасности", [volume.name])
        }
